# pgvidar-sdk

./: README.md
include/pg/: vidar_api.h  vidar_interface.hpp  vidar_type.h
include/pg/utils/: opencv_helper.hpp
include/vision_type/: base_type.hpp  c_vision_type_common.h  vision_msg.hpp  vision_type.hpp
pgvidar2-example/: CMakeLists.txt  README.md
pgvidar2-example/config/: vidar2_cfg.json  vidar2_orig.json  vidar2_remap.json
pgvidar2-example/src/: vidar2_test.cpp
